[package]
name = "midnite_alert_api"
version = "0.1.0"
edition = "2021"
authors = ["Ashish"]
description = "An alerting API service for monitoring user actions based on predefined rules."
license = "MIT"
repository = "https://github.com/your-github-username/midnite_alert_api"
readme = "README.md"
keywords = ["alerting", "API", "Rust", "Actix", "Redis"]
categories = ["api-bindings", "network-programming", "web-programming"]

[dependencies]
actix-http = "3.9.0"
actix-web = "4"
anyhow = "1.0.89"
colored_json = "5.0.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = { version = "2.0.2", features = ["kv-mem"] }
